Blender file dialog displays in-progress Safari downloads as a folder #89129

Closed
opened 2021-06-14 09:48:22 +02:00 by Leon Zandman · 6 comments

System Information
Operating system: macOS-11.4-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 71.6.4

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked: -

Short description of error
When Safari is downloading a file, the file (or a placeholder) is temporarily saved as a macOS package file with a .download filename extension. The Blender file dialog shows such a file as a common (empty) folder, which I think it shouldn't.

Exact steps for others to reproduce the error

  1. Start downloading a large file using Safari.
  2. While downloading use Finder to go the Downloads folder (or wherever you chose to store the dowload).
  3. Notice the *.download package has been created. The Finder also displays a progress indicator.
  4. Open the same folder using Blender's File dialog. The *.download package is displayed as a regular folder.

DownloadProgress.gif

Remarks

  1. Safari decorates these temporary *.download files with extended file attributes:

    • com.apple.progress.fractionCompleted
    • com.apple.metadata:kMDItemWhereFroms
    • com.apple.metadata:kMDItemDownloadedDate
  2. Chrome downloads don't appear to be an issue. It seems Chrome uses a different mechanism. Its temporary *.crdownload files do display a download progress indicator in the Finder, but the temporary file isn't (recognized as) a macOS package. Also it doesn't seem to have the extended file attributes. Blender displays it as a regular file, but only when you turn off Blender's file filtering.

**System Information** Operating system: macOS-11.4-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 71.6.4 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: - **Short description of error** When Safari is downloading a file, the file (or a placeholder) is temporarily saved as a macOS package file with a `.download` filename extension. The Blender file dialog shows such a file as a common (empty) folder, which I think it shouldn't. **Exact steps for others to reproduce the error** 1. Start downloading a large file using Safari. 2. While downloading use Finder to go the Downloads folder (or wherever you chose to store the dowload). 3. Notice the `*.download` package has been created. The Finder also displays a progress indicator. 4. Open the same folder using Blender's File dialog. The `*.download` package is displayed as a regular folder. ![DownloadProgress.gif](https://archive.blender.org/developer/F10170600/DownloadProgress.gif) **Remarks** 1. Safari decorates these temporary `*.download` files with extended file attributes: * `com.apple.progress.fractionCompleted` * `com.apple.metadata:kMDItemWhereFroms` * `com.apple.metadata:kMDItemDownloadedDate` 2. Chrome downloads don't appear to be an issue. It seems Chrome uses a different mechanism. Its temporary `*.crdownload` files do display a download progress indicator in the Finder, but the temporary file isn't (recognized as) a macOS package. Also it doesn't seem to have the extended file attributes. Blender displays it as a regular file, but only when you turn off Blender's file filtering.
Author

Added subscriber: @Zandman

Added subscriber: @Zandman
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

You could probably give files that have com.apple.progress.fractionCompleted our eFileAttributes of FILE_ATTR_TEMPORARY and FILE_ATTR_HIDDEN. Then they would be hidden by default, but if you chose to show hidden files they should appear with a "temp file" icon. In theory.

You could probably give files that have com.apple.progress.fractionCompleted our eFileAttributes of FILE_ATTR_TEMPORARY and FILE_ATTR_HIDDEN. Then they would be hidden by default, but if you chose to show hidden files they *should* appear with a "temp file" icon. In theory.
Author

In #89129#1176645, @Harley wrote:
they would be hidden by default, but if you chose to show hidden files they should appear with a "temp file" icon. In theory.

I'll build a quick proof-of-concept. But it seems like a sub-optimal solution.

This issue, like the recent OneDrive-issues, falls into the category of providing better, more system native-like, file dialog experiences. Maybe all macOS packages need to shown/treated in a special way? Maybe there should be a way for files and folders to never ever get shown in the file dialog?

> In #89129#1176645, @Harley wrote: > they would be hidden by default, but if you chose to show hidden files they *should* appear with a "temp file" icon. In theory. I'll build a quick proof-of-concept. But it seems like a sub-optimal solution. This issue, like the recent OneDrive-issues, falls into the category of providing better, more system native-like, file dialog experiences. Maybe all macOS packages need to shown/treated in a special way? Maybe there should be a way for files and folders to never ever get shown in the file dialog?

This issue was referenced by beb6399ae5

This issue was referenced by beb6399ae5971fdbbf8aa6eb8832200afabeb97d

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-06-24 19:37:53 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89129
No description provided.