Fix T89129: file dialog displays in-progress Safari downloads as a folder

In-progress Safari download files/packages are now recognized as bundles
and therefore not treated as directories.

Differential Revision: https://developer.blender.org/D11613